add buildable reference to xcscheme

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Swifixture.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Swifixture.xcscheme
@@ -71,12 +71,21 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
+            BlueprintIdentifier = "swifixture"
+            BuildableName = "swifixture"
+            BlueprintName = "swifixture"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
             BlueprintIdentifier = "Sample"
             BuildableName = "Sample"
             BlueprintName = "Sample"
             ReferencedContainer = "container:">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
